Clear float for video to avoid overlapping on images (#150)
When inserted images in News bodies are aligned left or right, they use the "align" attribute which behaves like float.
When a video is added below the image, because of the attribute and because of the 100% width of the video, it overlaps the image.

To prevent this issue, float is always reset when inserting a video (clear: both).

--- a/webapp/src/main/webapp/css/news.less
+++ b/webapp/src/main/webapp/css/news.less
@@ -299,6 +299,7 @@
 
       .video {
         position: relative;
+        clear: both;
         width: 60%;
         height: 0;
         padding-bottom: 33.74%;
@@ -306,7 +307,7 @@
 
         iframe {
           position: absolute;
-          top: 0;
+          top: 15px;
           left: 0;
           width: 100%;
           height: 100%;
